# apiweave

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEV_SETUP.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  apiweave-context.md  docker-compose.stripe-dev.yml  docker-compose.yml  learnings.md  package-lock.json  pyproject.toml  setup-backend.bat  setup-backend.sh  setup-frontend.bat  setup-frontend.sh  setup.bat  setup.sh  start-dev.bat  start-dev.sh  stop-dev.bat  stop-dev.sh  todo.md
backend/: .env.example  .importlinter  Dockerfile  mcp_stdio.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  idempotency.py  main.py  models.py  worker.py
backend/app/auth/: dependencies.py  exceptions.py  permissions.py  provider_registry.py  router.py  scope_resolver.py  single_user.py
backend/app/billing/: entitlement_resolver.py  plans.py  stripe_service.py
backend/app/core/: __init__.py  container.py  exceptions.py
backend/app/mcp/: __init__.py  auth.py  collection_run_readiness.py  contracts.py  database.py  datetime_utils.py  scope_context.py  server.py  transport.py
backend/app/middleware/: __init__.py  rate_limiter.py  webhook_auth.py
backend/app/migrations/: fix_workflow_fields.py
backend/app/models/: __init__.py  audit.py  encryption.py  enums.py  environment.py  org_invite.py  organization.py  project.py  run.py  secret.py  service_token.py  team.py  user.py  webhook.py  workflow.py  workspace.py
backend/app/reporters/: __init__.py
backend/app/repositories/: __init__.py  audit_repository.py  auth_repositories.py  collection_repository.py  collection_run_repository.py  email_auth_repository.py  environment_repository.py  org_invite_repository.py  organization_repository.py  outside_collaborator_repository.py  pending_approval_repository.py  project_repository.py  run_repository.py  scoped_environment_repository.py  secret_crypto.py  secret_kek.py  secret_repository.py  service_token_repository.py  subscription_repository.py  team_permission_grant_repository.py  team_repository.py  webhook_repository.py  workflow_repository.py  workspace_repository.py
backend/app/routes/: __init__.py  audit.py  auth_admin.py  billing.py  collections.py  environment_protection.py  environments.py  invites.py  keys.py  mcp_config.py  orgs.py  projects.py  runs.py  scoped_environments.py  secrets.py  service_tokens.py  webhooks.py  workflows.py  workspaces.py
backend/app/runner/: __init__.py  audit_resolver.py  dynamic_functions.py  executor.py  scoped_secret_resolver.py  upload_sandbox.py
backend/app/services/: __init__.py  audit_resolver_helper.py  audit_service.py  bootstrap.py  collection_service.py  email_auth_service.py  entitlements.py  environment_protection_service.py  environment_service.py  exceptions.py  import_service.py  invite_service.py  org_invite_service.py  org_service.py  project_export_service.py  project_service.py  run_service.py  safe_http.py  scoped_environment_service.py  scoped_secret_resolver.py  scoped_secrets.py  scoped_workflow_service.py  secret_binding_service.py  secret_crypto.py  secret_kek.py  secret_sealed_box.py  secret_service.py  secret_utils.py  service_token_service.py  team_service.py  upload_sandbox.py  webhook_executor.py  webhook_runner.py  workflow_service.py  workspace_service.py
backend/app/utils/: openapi_examples.py  openapi_import_limits.py  slug.py  soft_delete.py  swagger_discovery.py  workflow_integrity.py
backend/scripts/: adopt_workspace.py  audit_bootstrap.py  audit_cleanup.py  poc_file_read.py  poc_read_env.py  poc_secret_sub.py  poc_ssrf.py  poc_ssrf_multi.py  wipe_db.py
backend/tests/: conftest.py  test_approved_domains.py  test_auth_config.py  test_auth_dependencies.py  test_auth_fixtures.py  test_auth_models.py  test_auth_repositories.py  test_auth_route_permissions.py  test_beanie_documents.py  test_bootstrap.py  test_config_validators.py  test_cors_mcp.py  test_csrf_docs.py  test_entitlements.py  test_executor_auth.py  test_executor_key_value_normalize.py  test_executor_metadata.py  test_executor_safe_http.py  test_executor_secrets.py  test_executor_upload_sandbox.py  test_file_uploads.py  test_file_uploads_integration.py  test_invite_accept.py  test_invite_service.py  test_invites.py  test_masking_integration.py  test_mcp_collection_run_readiness.py  test_mcp_contracts.py  test_mcp_discovery.py  test_mcp_doc_resources.py  test_mcp_import_tools.py  test_mcp_inventory_drift.py  test_mcp_prompts.py  test_mcp_resource_registration_guard.py  test_mcp_resources.py  test_mcp_run_tools.py  test_mcp_secret_tools.py  test_mcp_webhook_schemas.py  test_oauth_and_registry.py  test_oauth_callbacks.py  (+32 more)
backend/tests/audit/: test_audit.py  test_audit_content.py
backend/tests/environment_protection/: test_environment_protection.py  test_reviewers.py
backend/tests/environments/: test_scoped_environments.py
backend/tests/export_import/: test_project_export_import.py
backend/tests/fixtures/: __init__.py  auth_fixtures.py  oauth_mocks.py
backend/tests/guards/: __init__.py  test_legacy_route_guards.py
backend/tests/integration/: conftest.py  test_billing_entitlements.py  test_billing_stripe.py  test_email_login.py  test_env_protection_gate.py  test_mcp_run_scope.py  test_mcp_workflow_environment.py  test_org_invite_resend.py  test_rate_limiter_mongodb.py  test_team_authz.py  test_tenant_isolation_db.py  test_workflow_listing_unattached.py  test_workspace_create_authz.py  test_workspace_mutation_authz.py
backend/tests/mcp/: test_inventory.py  test_phase2_tools.py  test_phase5_tools.py  test_scoped_tokens.py
backend/tests/orgs/: test_org_apis.py
backend/tests/permissions/: test_role_matrix.py
backend/tests/routes/: test_audit.py  test_old_routes.py  test_org_flows.py  test_route_skeleton.py  test_slug_conflicts.py  test_soft_delete.py
backend/tests/runs/: test_mid_run_removal.py  test_run_actor.py
backend/tests/runtime/: test_audit_fail_closed.py  test_env_soft_deleted_queued.py  test_executor_context.py  (+3 more)
backend/tools/: audit_workflow_integrity.py
(+1657 files in other folders)
