[project]
name = "apiweave"
version = "0.1.0"
description = "Visual API Test Workflows Made Simple"
authors = [{name = "Ahmed KHIARI"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "starlette>=0.40.0,<0.49.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "beanie>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "jsonpath-ng>=1.6.0",
    "jsonschema>=4.20.0",
    "junit-xml>=1.9",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "mcp>=1.2.0,<2.0",
    "sse-starlette>=1.6.1,<3.0.0",
    "aiosmtplib>=3.0.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
exclude = ["app/routes/_legacy_disabled/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
