[project]
name = "apiweave"
version = "0.1.0"
description = "Visual API Test Workflows Made Simple"
authors = [{name = "Ahmed KHIARI"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "starlette>=0.40.0,<0.49.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "beanie>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "jsonpath-ng>=1.6.0",
    "jsonschema>=4.20.0",
    "junit-xml>=1.9",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "mcp>=1.2.0,<2.0",
    "sse-starlette>=1.6.1,<3.0.0",
    "aiosmtplib>=3.0.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/*" = [
    "N815",    # mixedCase variable in class scope (MongoDB schema uses camelCase)
    "RUF012",  # mutable class attributes should be annotated
    "UP038",   # use X | Y in isinstance instead of (X, Y)
    "UP042",   # use X | Y for type union
    "E501",    # line too long (model field descriptions are verbose)
]
"app/routes/invites.py" = ["N815"]
"app/routes/keys.py" = ["N815"]
"app/repositories/workflow_repository.py" = ["E711"]
"app/services/import_service/*" = [
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # do not perform function calls in argument defaults
    "B904",    # raise from e or from None
    "C901",    # complex function
    "PLC0415", # import outside top-level
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "N803",    # invalid argument name
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
]
"app/services/project_export_service/*" = [
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # do not perform function calls in argument defaults
    "B904",    # raise from e or from None
    "C901",    # complex function
    "PLC0415", # import outside top-level
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "N803",    # invalid argument name
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
    "UP038",   # use X | Y in isinstance
]
"app/services/webhook_runner.py" = ["N818"]
"scripts/*" = []
"tests/*" = ["N815", "E402"]
"app/runner/executor/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "N806", "ARG001", "ARG002",
    "E501", "E722",
]
"app/runner/dynamic_functions.py" = ["N802", "E501"]
"app/runner/executor/_assertion.py" = ["UP038"]
"app/services/__init__.py" = ["F401"]
"app/repositories/auth_repositories/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
]
"app/auth/router/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
]
"app/routes/webhooks/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "N815", "ARG001", "ARG002", "E501",
]
"app/routes/workspaces/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "N815", "ARG001", "ARG002", "E501",
]
"app/routes/scoped_environments/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "N815", "ARG001", "ARG002", "E501",
]
"app/services/run_service/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "ARG001", "ARG002",
]
"app/services/scoped_workflow_service/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "ARG001", "ARG002",
]
"app/services/workspace_service/*" = [
    "ANN201", "ANN202", "B008", "B904", "C901",
    "PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "N803", "ARG001", "ARG002",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
