[project]
name = "apiweave"
version = "0.5.0"
description = "Visual API Test Workflows Made Simple"
authors = [{name = "Ahmed KHIARI"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "starlette>=0.40.0,<0.49.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "beanie>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "jsonpath-ng>=1.6.0",
    "jsonschema>=4.20.0",
    "junit-xml>=1.9",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "mcp>=1.2.0,<2.0",
    "sse-starlette>=1.6.1,<3.0.0",
    "aiosmtplib>=3.0.0",
    "pynacl>=1.5.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "mongomock-motor>=0.0.36",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["app/routes/_legacy_disabled/**", "**/tools/**", "**/routes/_legacy_disabled/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E711", "E722", "UP038", "N802", "N803", "N806", "N815", "N818"]

[tool.ruff.lint.per-file-ignores]
# Tests get lenience: long describe strings, sys.modules patching, mock helpers.
"tests/**/*.py" = ["E501", "E722", "E402", "N806", "N802", "N815"]
"**/tests/**/*.py" = ["E501", "E722", "E402", "N806", "N802", "N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# ponytail: the codebase isn't fully annotated (route handlers declare return
# types via response_model). Require annotations for new public APIs via review,
# not via a blanket mypy gate that flags ~100 correct-but-unannotated handlers.
disallow_untyped_defs = false
disallow_untyped_calls = false
exclude = ["app/routes/_legacy_disabled/"]

# Beanie's descending-sort idiom (-Document.field) is a runtime-supported
# negation on a field proxy that mypy reads as unary-minus-on-datetime.
[[tool.mypy.overrides]]
module = "app.repositories.*"
disable_error_code = ["operator"]

# Third-party libs shipped without inline type stubs.
[[tool.mypy.overrides]]
module = ["authlib.*", "aiofiles"]
ignore_missing_imports = true
